tests/NormalTests/paczka1/small_fuzzy/40275198.err
Error in line 3: DbFbf33p S118 30,1
Error in line 10: DbFbf33p A178 94,0
Error in line 8: S118 S118 184,2
